fix: correct JWT implementation to align with best practices